--- a/_data/data.yml
+++ b/_data/data.yml
@@ -93,7 +93,7 @@ projects:
     assignments:
       - title: Backwoods Of Dismay
         link: "#"
-        tagline: "A uni-project turned first person horrow game made with Unity."
+        tagline: "A uni-project turned first person horror game made with Unity."
 
 publications:
     title: Publications
