--- a/_data/data.yml
+++ b/_data/data.yml
@@ -68,11 +68,11 @@ experiences:
           - Computer Systems Engineer
           - Network and Telecommunications Engineer / Administrator
           - Database Administrator
-    - role: Web Developer
+    - role: Web Developer, Human Resources, Customer Service, Networking & Automation Technician
       time: 06/2021 - 08/2021
-      company: Ionian University, Volos
+      company: Smart Technologies, Volos
       details: |
-        Internship will allow students to obtain realistic views on employment relationships, the level of earnings and the labor market.
+        Internship allows students to obtain realistic views on employment relationships, the level of earnings and the labor market.
         It includes activities related to the subjects of the Department. These activities may concern:
           - Software development that companies can use to improve their operation on an administrative and technical level.
           - Software operation and the ability to use tools of modern technology.
